New minigame commands

--- a/config.yml
+++ b/config.yml
@@ -93,18 +93,91 @@ commands:
         - "Outlook good."
         - "Yes."
         - "Signs point to yes."
+        - "Absolutely!"
+        - "No doubt about it."
+        - "You can count on it."
+        - "The stars say yes."
+        - "Chances are high."
+        - "Affirmative."
+        - "All signs point to yes."
+        - "The universe agrees."
+        - "You got it!"
+        - "For sure!"
+        - "It will happen."
+        - "Definitely yes."
+        - "You will not be disappointed."
+        - "The answer is clear: yes."
+        - "The odds are in your favor."
+        - "Yes, in due time."
+        - "Yes, and soon."
+        - "Yes, and it will be amazing."
+        - "Yes, trust your instincts."
+        - "Yes, you are on the right path."
+        - "Yes, the pack is with you!"
+
       non_committal:
         - "Reply hazy, try again."
         - "Ask again later."
         - "Better not tell you now."
         - "Cannot predict now."
         - "Concentrate and ask again."
+        - "Maybe, maybe not."
+        - "The answer is unclear."
+        - "I can't say right now."
+        - "It's complicated."
+        - "Ask me again soon."
+        - "The spirits are silent."
+        - "The fog is thick, try again."
+        - "Not sure, try again."
+        - "I wish I could tell you."
+        - "The answer is hidden."
+        - "Uncertain, ask again."
+        - "Let me think about it."
+        - "The future is murky."
+        - "I can't decide now."
+        - "It's not for me to say."
+        - "The answer is lost in time."
+        - "Wait and see."
+        - "It's a mystery."
+        - "Only time will tell."
+        - "The pack is undecided."
+        - "The moon is not clear tonight."
+        - "The stars are not aligned."
+        - "Ask the wind."
+        - "The answer is not ready yet."
+        - "Try again after a howl."
+
       negative:
         - "Don't count on it."
         - "My reply is no."
         - "My sources say no."
         - "Outlook not so good."
         - "Very doubtful."
+        - "No way."
+        - "Absolutely not."
+        - "The stars say no."
+        - "Chances are low."
+        - "Negative."
+        - "I don't think so."
+        - "The universe disagrees."
+        - "No, not now."
+        - "No, and don't ask again."
+        - "No, the pack says no."
+        - "No, the moon is dark."
+        - "No, not in this lifetime."
+        - "No, the odds are against you."
+        - "No, the answer is no."
+        - "No, not a chance."
+        - "No, the spirits say no."
+        - "No, the wind howls against it."
+        - "No, the path is blocked."
+        - "No, the answer is lost."
+        - "No, the stars are silent."
+        - "No, the future is bleak."
+        - "No, the pack turns away."
+        - "No, the answer is hidden."
+        - "No, the night is too dark."
+        - "No, the howl is silent."
 
   e621:
     color: '#FF69B4'  # Pink
@@ -348,6 +421,176 @@ commands:
         - "🧾 **{initiator}** and **{target}**: Signed, sealed, divorced."
         - "💔 **{initiator}** and **{target}**: No more happy endings."
         - "🧳 **{initiator}** packed their bags and left **{target}** behind."
+
+  truthordare:
+    color_truth: '#3498db'      # Albastru pentru Truth
+    color_dare: '#e67e22'       # Portocaliu pentru Dare
+    messages:
+      truth_title: "Truth 🧐"
+      dare_title: "Dare 🎲"
+      footer: "Requested by {user}"
+    truths:
+      - "What is your favorite hobby?"
+      - "Have you ever kept a funny secret?"
+      - "What is the silliest thing you’ve ever done?"
+      - "If you could have any superpower, what would it be?"
+      - "What’s your favorite movie and why?"
+      - "What’s the most embarrassing thing that’s happened to you at school?"
+      - "If you could travel anywhere, where would you go?"
+      - "What’s your favorite food?"
+      - "What’s a talent you wish you had?"
+      - "What’s the best gift you’ve ever received?"
+      - "What is your biggest fear?"
+      - "Have you ever lied to your best friend?"
+      - "What is your guilty pleasure?"
+      - "Who was your first crush?"
+      - "What is the weirdest dream you’ve ever had?"
+      - "If you could change one thing about yourself, what would it be?"
+      - "What’s the most childish thing you still do?"
+      - "Have you ever cheated on a test?"
+      - "What’s the most trouble you’ve ever gotten into?"
+      - "If you could be invisible for a day, what would you do?"
+      - "What’s the most awkward thing you’ve ever said?"
+      - "What’s the last thing you searched for on your phone?"
+      - "Have you ever pretended to be sick to skip school?"
+      - "What’s the most expensive thing you own?"
+      - "If you could swap lives with anyone for a day, who would it be?"
+      - "What’s a secret you’ve never told anyone?"
+      - "What’s your biggest regret?"
+      - "What’s the most embarrassing thing in your room?"
+      - "Have you ever had a crush on a teacher?"
+      - "What’s the worst gift you’ve ever received?"
+      - "What’s the most useless talent you have?"
+      - "What’s the longest you’ve gone without showering?"
+      - "What’s the weirdest food you’ve ever eaten?"
+      - "Have you ever been caught talking to yourself?"
+      - "What’s the funniest thing you’ve ever done to get someone’s attention?"
+      - "If you could time travel, where and when would you go?"
+      - "What’s the most ridiculous lie you’ve ever told?"
+      - "What’s your favorite song to sing in the shower?"
+      - "If you could be any animal, what would you be and why?"
+      - "What’s the most embarrassing thing you’ve posted online?"
+      - "What’s your weirdest habit?"
+      - "What’s the most childish thing you still do?"
+      - "Have you ever stalked someone on social media?"
+      - "What’s the worst date you’ve ever been on?"
+      - "What’s your biggest pet peeve?"
+      - "What’s the most random thing in your bag/pocket right now?"
+      - "What’s your favorite guilty pleasure TV show?"
+      - "What’s the most embarrassing nickname you’ve ever had?"
+      - "What’s the weirdest thing you’ve done in public?"
+      - "If you could only eat one food for the rest of your life, what would it be?"
+
+    dares:
+      - "Send a funny emoji in the chat."
+      - "Say the alphabet backwards."
+      - "Share a fun fact about yourself."
+      - "Change your nickname to something silly for 5 minutes."
+      - "Type your next message with your eyes closed."
+      - "Compliment someone in the server."
+      - "Tell a joke in the chat."
+      - "React to the last message with three different emojis."
+      - "Pretend to be a robot for your next message."
+      - "Use only GIFs for your next two messages."
+      - "Do 10 jumping jacks and send a selfie (if you want)."
+      - "Speak in rhymes for the next 5 minutes."
+      - "Send a random meme in the chat."
+      - "Change your profile picture to something silly for 10 minutes."
+      - "Send a message using only emojis."
+      - "Imitate another server member until someone guesses who it is."
+      - "Write a poem about another member."
+      - "Say something nice about every person in the voice channel."
+      - "Sing the chorus of your favorite song (voice or text)."
+      - "Pretend to be a cat for your next message."
+      - "Let another member pick your next status."
+      - "Send a DM to a random member saying 'You’re awesome!'"
+      - "Use a random accent for your next 3 messages."
+      - "Post the last photo you took (if appropriate)."
+      - "Do your best animal impression in voice or text."
+      - "Make up a story about how you met your best friend."
+      - "Say the first word that comes to your mind for each letter of your name."
+      - "Let someone else write your next message."
+      - "Change your nickname to a food for 10 minutes."
+      - "Send a message backwards."
+      - "Act like a famous celebrity for the next 3 messages."
+      - "Draw a quick doodle and share it (if possible)."
+      - "Say something embarrassing about yourself."
+      - "Pretend you’re an alien visiting Earth for your next message."
+      - "Write a love letter to your favorite food."
+      - "Send a compliment to the person above you."
+      - "Type your next message with your non-dominant hand."
+      - "Send a random quote."
+      - "Make up a new word and use it in a sentence."
+      - "Let another member dare you to do something!"
+      - "Send a message using only song lyrics."
+      - "Do your best evil laugh in text or voice."
+      - "Pretend to be a dog for your next message."
+      - "Say 'banana' after everything you type for the next 5 minutes."
+      - "Tell everyone your favorite joke."
+      - "Send the oldest meme you have saved."
+      - "Make up a rumor about yourself."
+      - "Say something in a made-up language."
+      - "Let someone else choose your next profile picture."
+
+  gender:
+    title: "🌈 Gender & Sexuality Check!"
+    description: "{member} is **{percentage}% {identity}**!"
+    identities:
+      - label: "Gay 🏳️‍🌈"
+        color: "#ff69b4"
+      - label: "Straight 🏳️‍⚧️"
+        color: "#3498db"
+      - label: "Bisexual 💜💙💖"
+        color: "#8e44ad"
+      - label: "Pansexual 💛💗💙"
+        color: "#f1c40f"
+      - label: "Asexual 🖤🤍💜"
+        color: "#2c3e50"
+      - label: "Lesbian 🧡🤍💗"
+        color: "#e67e22"
+      - label: "Transgender 💙🤍💗"
+        color: "#5dade2"
+      - label: "Non-binary 💛🤍💜🖤"
+        color: "#f7ca18"
+      - label: "Queer 🌈"
+        color: "#16a085"
+    messages:
+      not_found: "Member not found."
+
+  serverinfo:
+    color: '#5865F2'
+    messages:
+      title: "🌐 {servername}"
+      description: "**Server Information**"
+      fields:
+        server_id: "🆔 Server ID"
+        owner: "👑 Owner"
+        created: "📆 Created"
+        members: "👥 Members"
+        text_channels: "💬 Text Channels"
+        voice_channels: "🔊 Voice Channels"
+        roles: "🎭 Roles"
+        boost_level: "🚀 Boost Level"
+        boosts: "✨ Boosts"
+      footer: "Requested by {user}"
+
+  userinfo:
+    color: '#3498db'
+    messages:
+      title: "👤 {tag}"
+      description: "**User Information**"
+      not_found: "Member not found."
+      fields:
+        user_id: "🆔 User ID"
+        bot: "🤖 Bot"
+        nickname: "🎭 Nickname"
+        account_created: "📆 Account Created"
+        joined_server: "📅 Joined Server"
+        roles: "🎨 Roles"
+      yes: "Yes"
+      no: "No"
+      none: "None"
+      footer: "Requested by {user}"
 
 # Event-specific configurations
 events:
