--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Puro is a versatile and dynamic Discord bot designed to enhance your server experience. With a wide range of commands and seamless integration, Puro helps automate tasks and bring more fun and efficiency to your Discord community.",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
+    "start": "node --trace-warnings app.js",
     "dev": "nodemon app.js",
     "lint": "eslint .",
     "test": "jest",
