--- a/package.json
+++ b/package.json
@@ -5,10 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node --trace-warnings app.js",
-    "dev": "nodemon app.js",
-    "lint": "eslint .",
-    "test": "jest",
-    "update": "npm update"
+    "dev": "nodemon app.js"
   },
   "dependencies": {
     "axios": "^1.9.0",
